--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "4461-react-context-api",
+  "homepage": "https://heldo07.github.io/react-context-api-projeto-base/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "server": "json-server db.json --port 5000"
-
-  },
+ "scripts": {
+  "dev": "vite",
+  "build": "tsc && vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "axios": "^1.13.5",
     "json-server": "^0.17.4",
@@ -28,6 +28,7 @@
     "eslint": "^9.19.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
